collapsed menu icon no longer affected by min width

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -27,7 +27,11 @@ nav {
 	}
     }
 
-    .nav-link {
-	min-width: 50px;
+    .navbar-nav {
+	&:first-child {
+	    .nav-link {
+		min-width: 50px;
+	    }
+	}
     }
 }
